# jsonvice

./: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  tox.ini
dev/: foo.json  json_prec_minifier.py  simple_test.json  simple_test_out.json  todo.md
src/jsonvice/: __init__.py  jsonvice.py
tests/: test_jsonvice.py
