[tool.poetry]
name = "jsonvice"
version = "1.0.2"
description = "jsonvice minifies JSON files by trimming floating point precision."
readme = "README.md"
authors = ["Manu Chatterjee <deftio@deftio.com>"]
homepage = "https://github.com/deftio/jsonvice"
repository = "https://github.com/deftio/jsonvice"
keywords = ["json", "minify", "truncate floating point precision","json quanitize","quantize"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"  # Python 3.6 is deprecated, so we're using 3.8+
tox = "^4.18.0"  # Updated to the latest stable version of tox
pytest = "^8.0.0"  # Ensure compatibility with newer pytest
coveralls = "^3.3.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
# Only dev dependencies, you don't need coveralls twice.
pytest = "^8.0.0"
tox = "^4.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jsonvice = "jsonvice.jsonvice:cli"

[tool.poetry-exec-plugin.commands] 
coverage = "poetry run pytest --cov-report term --cov=jsonvice -vv"
